# my-package

./: README.md  pyproject.toml
.github/workflows/: test-package.yaml
docs/: rtd_requirements.txt
docs/source/: conf.py  index.md
docs/source/notebooks/: usage.ipynb
src/my_package/: calc.py
tests/test_calc/: test_square.py
