[tool.poetry]
name = "my-package"
version = "0.1.0"
description = ""
authors = ["Tomer Gabay <tomergabay@Admins-MacBook-Pro.local>"]
readme = "README.md"
packages = [{include = "my_package", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
