[tool.poetry]
name = "my-package"
version = "0.1.0"
description = ""
authors = ["Tomer Gabay <tomergabay@Admins-MacBook-Pro.local>"]
readme = "README.md"
packages = [{include = "my_package", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
black = "^22.8.0"
isort = "^5.10.1"
pre-commit = "^2.20.0"



[tool.poetry.group.test.dependencies]
pytest = "^7.1.3"
hypothesis = "^6.56.1"
flake8 = "^5.0.4"

[tool.black]
line-length = 79
exclude = '''
/(
\.git
| \.hg
| \.mypy_cache
| \.tox
| \.venv
| _build
| buck-out
| build
| dist
| docs
)/
'''

[tool.isort]
profile = "black"
known_third_party = ["hypothesis", "my_package", "pytest"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
